// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree match snapshot 1`] = `
<div>
  <ul
    class="css-1ukl6jy"
    data-testid="tree"
  >
    <li
      class="css-1lh1lxa"
      style="margin-left: 0px;"
    >
      <div
        class="css-12pjvak"
        style="margin-left: 0px;"
      >
        <button
          class="css-1ne2h4j"
          data-testid="treeCollapsingItemListButton"
        >
          <ion-icon
            data-testid="ionicon"
            src="/images/ionicons/add-circle.svg"
            style="font-size: 24px;"
          />
        </button>
        <div
          class="css-gmuwbf"
        >
          <button
            class="css-14j6g8y"
            data-testid="treeItemTitleButton"
          >
            Catégorie Une
          </button>
        </div>
      </div>
    </li>
    <li
      class="css-1lh1lxa"
      style="margin-left: 0px;"
    >
      <div
        class="css-12pjvak"
        style="margin-left: 28px;"
      >
        <div
          class="css-gmuwbf"
        >
          <button
            class="css-14j6g8y"
            data-testid="treeItemTitleButton"
          >
            Catégorie Deux
          </button>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Tree match snapshot with selected item 1`] = `
<div>
  <ul
    class="css-1ukl6jy"
    data-testid="tree"
  >
    <li
      class="css-1lh1lxa"
      style="margin-left: 0px;"
    >
      <div
        class="css-12pjvak"
        style="margin-left: 0px;"
      >
        <button
          class="css-1ne2h4j"
          data-testid="treeCollapsingItemListButton"
        >
          <ion-icon
            data-testid="ionicon"
            src="/images/ionicons/add-circle.svg"
            style="font-size: 24px;"
          />
        </button>
        <div
          class="css-gmuwbf"
        >
          <button
            class="css-14j6g8y"
            data-testid="treeItemTitleButton"
          >
            <span
              class="css-1081t4c"
            >
              Catégorie Une
            </span>
          </button>
        </div>
      </div>
    </li>
    <li
      class="css-1lh1lxa"
      style="margin-left: 0px;"
    >
      <div
        class="css-12pjvak"
        style="margin-left: 28px;"
      >
        <div
          class="css-gmuwbf"
        >
          <button
            class="css-14j6g8y"
            data-testid="treeItemTitleButton"
          >
            Catégorie Deux
          </button>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
